restricting-traffic/kube-system.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: kube-system
  labels:
    k8s-namespace: kube-system
